fix white space on side

--- a/web18-merch.css
+++ b/web18-merch.css
@@ -1,5 +1,12 @@
-body {
-	background-color: white;
+
+html,body
+{
+    background-color: white;
+	width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 
 .main{
@@ -71,7 +78,7 @@ body {
   width: 100%;
   opacity: 1;
   background-image: url(images/soldoverlay2.gif);
-  background-position:center;
+  background-position: left;
   z-index:2;
 }
 
